--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "axios": "^1.6.0",
+    "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -27,18 +29,24 @@
     "@nx/devkit": "22.0.1",
     "@nx/eslint": "22.0.1",
     "@nx/eslint-plugin": "22.0.1",
+    "@nx/express": "^22.0.1",
     "@nx/jest": "22.0.1",
     "@nx/js": "22.0.1",
+    "@nx/node": "22.0.1",
     "@nx/playwright": "22.0.1",
     "@nx/web": "22.0.1",
+    "@nx/webpack": "22.0.1",
     "@nx/workspace": "22.0.1",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~20.3.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
     "angular-eslint": "^20.3.0",
     "eslint": "^9.8.0",
@@ -46,14 +54,17 @@
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.6.1",
     "jest-util": "^29.7.0",
     "nx": "22.0.1",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "webpack-cli": "^5.1.4"
   }
 }
