--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@taiga-ui/cdk": "^4.60.0",
+    "@taiga-ui/core": "^4.60.0",
+    "@taiga-ui/icons": "^4.60.0",
+    "@taiga-ui/kit": "^4.60.0",
     "axios": "^1.6.0",
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
+    "taiga-ui": "^4.60.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
