--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@taiga-ui/addon-charts": "^4.60.0",
+    "@taiga-ui/addon-commerce": "^4.60.0",
+    "@taiga-ui/addon-doc": "^4.60.0",
+    "@taiga-ui/addon-mobile": "^4.60.0",
+    "@taiga-ui/addon-table": "^4.60.0",
     "@taiga-ui/cdk": "^4.60.0",
     "@taiga-ui/core": "^4.60.0",
     "@taiga-ui/icons": "^4.60.0",
     "@taiga-ui/kit": "^4.60.0",
+    "@taiga-ui/layout": "^4.60.0",
     "axios": "^1.6.0",
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
