added taiga styles and a button component

--- a/apps/mbarmaja-client/project.json
+++ b/apps/mbarmaja-client/project.json
@@ -21,7 +21,12 @@
             "input": "apps/mbarmaja-client/public"
           }
         ],
-        "styles": ["apps/mbarmaja-client/src/styles.scss"]
+        "styles": [
+          "apps/mbarmaja-client/src/styles.scss",
+          "@taiga-ui/core/styles/taiga-ui-theme.less",
+          "@taiga-ui/core/styles/taiga-ui-fonts.less",
+          "@taiga-ui/addon-mobile/styles/taiga-ui-mobile.less"
+        ]
       },
       "configurations": {
         "production": {
