added taiga ui assets to project.json

--- a/apps/mbarmaja-client/project.json
+++ b/apps/mbarmaja-client/project.json
@@ -18,7 +18,8 @@
         "assets": [
           {
             "glob": "**/*",
-            "input": "apps/mbarmaja-client/public"
+            "input": "node_modules/@taiga-ui/icons/src",
+            "output": "assets/taiga-ui/icons"
           }
         ],
         "styles": [
