--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@taiga-ui/icons": "^4.60.0",
     "@taiga-ui/kit": "^4.60.0",
     "@taiga-ui/layout": "^4.60.0",
+    "@taiga-ui/styles": "^4.60.0",
     "axios": "^1.6.0",
     "express": "^4.21.2",
+    "less": "^4.4.2",
     "rxjs": "~7.8.0",
     "taiga-ui": "^4.60.0",
     "zone.js": "~0.15.0"
