--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@taiga-ui/addon-table": "^4.60.0",
     "@taiga-ui/cdk": "^4.60.0",
     "@taiga-ui/core": "^4.60.0",
+    "@taiga-ui/experimental": "^4.60.0",
     "@taiga-ui/icons": "^4.60.0",
     "@taiga-ui/kit": "^4.60.0",
     "@taiga-ui/layout": "^4.60.0",
