--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,10 @@
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
+    "strict": true,
+    "noImplicitOverride": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
