--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,5 +23,5 @@
       "@utils": ["libs/utils/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"],
+  "exclude": ["node_modules", "tmp"]
 }
